--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Privacy Policy - Sumon Trading App</title>
+  <title>Privacy Policy - Suman Trading App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <h1>Privacy Policy – Sumon Trading App</h1>
+  <h1>Privacy Policy – Suman Trading App</h1>
 
   <p><strong>Last Updated:</strong> December 2, 2025</p>
-  <p><strong>App Name:</strong> Sumon Trading App</p>
+  <p><strong>App Name:</strong> Suman Trading App</p>
   <p><strong>Developer:</strong> Appsredx</p>
 
   <p>
-    Sumon Trading App respects your privacy. This Privacy Policy explains how we collect, use, store,
+    Suman Trading App respects your privacy. This Privacy Policy explains how we collect, use, store,
     and protect your personal information when you use our application.
   </p>
 
